{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 202,
  "lineage": "a9e6e850-0e88-fffd-8c69-8cacf383f6e7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08b0de77066601f19",
            "arn": "arn:aws:ec2:us-east-1:794158980060:instance/i-0f8eec253bc492a14",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f8eec253bc492a14",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a3281d73808ed3cc",
            "private_dns": "ip-192-168-20-119.ec2.internal",
            "private_ip": "192.168.20.119",
            "public_dns": "ec2-52-87-246-33.compute-1.amazonaws.com",
            "public_ip": "52.87.246.33",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0110e59bd22487a61",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "security_groups": [
              "sg-0491cebefcc774e4f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0427ceac2e444c27e",
            "tags": {
              "Infra": "K8S",
              "Name": "MASTER",
              "Type": "MASTER"
            },
            "tags_all": {
              "Infra": "K8S",
              "Name": "MASTER",
              "Type": "MASTER"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0491cebefcc774e4f"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh-key",
            "aws_security_group.sgweb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazonlinux_ami",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08b0de77066601f19",
            "arn": "arn:aws:ec2:us-east-1:794158980060:instance/i-0e29030108a1a8411",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e29030108a1a8411",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-087106da6bdf2b9c5",
            "private_dns": "ip-192-168-41-74.ec2.internal",
            "private_ip": "192.168.41.74",
            "public_dns": "ec2-52-23-197-175.compute-1.amazonaws.com",
            "public_ip": "52.23.197.175",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-02a6202d455a669d8",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "security_groups": [
              "sg-0491cebefcc774e4f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06f4fff19dde59a92",
            "tags": {
              "Infra": "K8S",
              "Name": "WORKER1",
              "Type": "WORKER"
            },
            "tags_all": {
              "Infra": "K8S",
              "Name": "WORKER1",
              "Type": "WORKER"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0491cebefcc774e4f"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh-key",
            "aws_security_group.sgweb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazonlinux_ami",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08b0de77066601f19",
            "arn": "arn:aws:ec2:us-east-1:794158980060:instance/i-0de178726208fb294",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0de178726208fb294",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02cb594d62a3b629d",
            "private_dns": "ip-192-168-59-1.ec2.internal",
            "private_ip": "192.168.59.1",
            "public_dns": "ec2-3-81-52-191.compute-1.amazonaws.com",
            "public_ip": "3.81.52.191",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-092b3915dba59e61a",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "security_groups": [
              "sg-0491cebefcc774e4f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-039e23436696eace4",
            "tags": {
              "Infra": "K8S",
              "Name": "WORKER2",
              "Type": "WORKER"
            },
            "tags_all": {
              "Infra": "K8S",
              "Name": "WORKER2",
              "Type": "WORKER"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0491cebefcc774e4f"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh-key",
            "aws_security_group.sgweb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazonlinux_ami",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "xablau-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794158980060:internet-gateway/igw-075573a61f9dd6956",
            "id": "igw-075573a61f9dd6956",
            "owner_id": "794158980060",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-01f821b29582eef66"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "xablau",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06258faaaa3b7dea2",
            "original_route_table_id": "rtb-05c05464a70f3e47c",
            "route_table_id": "rtb-083f36874b49fefe1",
            "vpc_id": "vpc-01f821b29582eef66"
          },
          "dependencies": [
            "aws_internet_gateway.xablau-gw",
            "aws_route_table.xablau",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "xablau",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794158980060:route-table/rtb-083f36874b49fefe1",
            "id": "rtb-083f36874b49fefe1",
            "owner_id": "794158980060",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-075573a61f9dd6956",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table Xablau"
            },
            "tags_all": {
              "Name": "Route Table Xablau"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f821b29582eef66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.xablau-gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgweb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794158980060:security-group/sg-0491cebefcc774e4f",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0491cebefcc774e4f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "Libera tudo apenas rede local",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "sgweb",
            "name_prefix": "",
            "owner_id": "794158980060",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sgweb"
            },
            "tags_all": {
              "Name": "sgweb"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f821b29582eef66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794158980060:subnet/subnet-0427ceac2e444c27e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0427ceac2e444c27e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "794158980060",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-01f821b29582eef66"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794158980060:subnet/subnet-06f4fff19dde59a92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f4fff19dde59a92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "794158980060",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-01f821b29582eef66"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794158980060:subnet/subnet-039e23436696eace4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.48.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039e23436696eace4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "794158980060",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-01f821b29582eef66"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794158980060:vpc/vpc-01f821b29582eef66",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0505ee0da454b274a",
            "default_route_table_id": "rtb-083f36874b49fefe1",
            "default_security_group_id": "sg-01482f6f0a0399892",
            "dhcp_options_id": "dopt-09ffcb33d2ab718e9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01f821b29582eef66",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-083f36874b49fefe1",
            "owner_id": "794158980060",
            "tags": {
              "Name": "xablau"
            },
            "tags_all": {
              "Name": "xablau"
            }
          }
        }
      ]
    }
  ]
}